# baixa-pdfs-condominio

./: .gitignore  README.md  analisa.py  baixa.py  baixacondominio.py  config.py  downloadportal.py  requirements.txt
client/: package-lock.json  package.json
client/src/: App.js  index.js
server/: .pdm-python  pyproject.toml
server/src/: config.py  downloadportal.py  requirements.txt
