
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "pandas==1.4.2",
    "lxml==4.9.2",
    "httpx",
    "dynaconf",
    "beautifulsoup4",
    "html5lib",
    "requests>=2.31.0",
    "openpyxl>=3.1.2",
]
requires-python = ">=3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
